@@ -4,3 +4,10 @@
     togethor, create a new object with same productId and New size and insert into products array.
 
 >   User can add product to cart from View Product Details page.
+
+04/01/2023 (04:39 PM)
+
+>   An error in user helpers rectified.
+
+>   Changed the POST request from the Product Details page from "Form" to AJAX.
+
